2011-10-04  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (match_line, match_files): Another correction to how bindings
	are handled in collect/coll. New bindings from the main clause and
	last clause must override old bindings. This is done by some
	additional set difference operations based on symbol identity.
	Otherwise it is possible to end up with multiple bindings for the
	same symbol, which is untidy. If the collect clause scrubs a variable
	with forget and re-binds it, then combining that environment 
	with the previous bindings will create a duplicate.
	Also, fixed a serious bug with the bindings from the last clause;
	the append was wrongly put into the loop that processes the collected
	lists.

2011-10-04  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (acons): New function.
	(set_diff): Optimize common case: list1 and list2
	are the same, or list2 is substructure of list1.
	Situations in which this won't be the case for variable bindings are
	rare.

	* lib.h (acons): Declared.

	* match.c (match_line): Use acons rather than acons_new, when binding
	variables that we know are new (the symbol is unbound). 
	When computing the set difference over bindings, use cons cell
	equality, rather than symbol equality. Symbol equality is wrong
	because a binding can be removed, and then a new binding can be
	introduced using the same symbol. This must be treated as
	a different binding.

2011-10-04  Kaz Kylheku  <kaz@kylheku.com>

	Bugfixes to the semantics of binding environments, which
	were broken in the face of deletions (local, forget).
	For some stupid reason, I had written a destructive routine for
	removing elements from an association list, and used it
	as the basis for the local and forget directives.

	* lib.c (eq_f, car_f): New variables.
	(identity_tramp, equal_tramp): Obsolete functions removed.
	(apply): Broken function disabled at run time.
	(funcall, funcall1, funcall2): Throw meaningful error instead
	of aborting.
	(alist_remove_test): New static function.